# nlp-spacy

./: .gitignore  README.md  ROADMAP.md  chatbot_basic.py  main.py  pyproject.toml  requirements.txt  run_coverage.py
data/packaged/: __init__.py  fundamentals.json
data/raw/: speech_i_have_a_dream.txt  speech_we_choose_to_go_to_the_moon.txt  speech_we_shall_fight_on_the_beaches.txt
tests/: __init__.py  test_component_counter.py  test_functions.py  test_pdf_reader.py  test_sample_counter.py  test_sentence_types.py  test_zipfs.py
utils/: __init__.py  component_counter.py  functions.py  pdf_reader.py  sample_counter.py  sentence_types.py  simplify.py  zipfs.py
