[project]
name = "nlp-spacy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "nltk>=3.9.2",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pypdf>=6.5.0",
    "requests>=2.32.5",
    "scipy>=1.16.3",
    "selenium>=4.39.0",
    "spacy>=3.8.11",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.coverage.run]
omit = [
    "utils/component_counter.py",
    "chatbot_basic.py",
    "main.py",
    "utils/__init__.py",
    "data/packaged/__init__.py",

]
