[project]
name = "nlp-spacy"
version = "0.1.0"
description = "Natural Language Processing tools using NLTK and spaCy"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "nltk>=3.9.2",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pypdf>=6.5.0",
    "requests>=2.32.5",
    "scipy>=1.16.3",
    "selenium>=4.39.0",
    "spacy>=3.8.11",
    "pydantic>=2.0,<3.0",
]

[project.scripts]
simplify = "utils.simplify:main"
types = "utils.sentence_types:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["utils"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.coverage.run]
omit = [
    "utils/component_counter.py",
    "chatbot_basic.py",
    "main.py",
    "utils/__init__.py",
    "data/packaged/__init__.py",

]
